--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Knox - Static</title>
+    <title>AKshico</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -59,19 +59,19 @@
             <div class="column">
 
                 <div class="text-pretitle">
-                    Nice to meet you.
+                    Gusto en conocerte.
                 </div>
 
                 <h1 class="text-huge-title">
-                We are preparing <br>
-                something exciting <br>
-                & amazing for you.
+                Estamos preparando <br>
+                algo emocionante <br>
+                & sorprendente para ti.
                 </h1>
 
                 <div class="s-intro__content-bottom">
 
                     <div class="s-intro__content-bottom-block">
-                        <h5>Launching in</h5>
+                        <h5>Lazamiento en</h5>
             
                         <div class="counter">
                             <div class="counter__time">
